# Advance-Backend-Engineering

./: .gitignore  README.md
Authentication and Security/Authorizations/Casbin/: CASBIN_WORKING_FLOW.md  README.md  main.py  pyproject.toml  seeding_script.py
Authentication and Security/Authorizations/Casbin/app/: config.py  database.py
database Engineering/concurrency locking deadlock/: README.md  main.py  pyproject.toml  scripts.py
database Engineering/concurrency locking deadlock/app/: config.py  database.py  schemas.py
database Engineering/concurrency locking deadlock/app/models/: account.py  card_transaction.py  withdraw.py
database Engineering/concurrency locking deadlock/app/routes/: accounts.py  debit_cards.py  transactions.py  withdrawals.py
database Engineering/concurrency locking deadlock/migrations/: env.py
database Engineering/concurrency locking deadlock/migrations/versions/: 34b165c64028_add_created_at_default.py  d9e71cabcede_add_card_swipe_support.py
database Engineering/concurrency locking deadlock/scripts/: scripts.py
database Engineering/concurrency locking deadlock/utility/: transactions.py
database Engineering/transaction management/: .env  API_DOCUMENTATION.md  SAVEPOINT_IMPLEMENTATION.md  SAVEPOINT_TESTING_GUIDE.md  SETUP_GUIDE.md  main.py  pyproject.toml
database Engineering/transaction management/app/config/: database_config.py
database Engineering/transaction management/app/database/: database.py  init_db.py
database Engineering/transaction management/app/dependancies/: dependancy.py
(+13 files in other folders)
