[project]
name = "concurrency-locking-deadlock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.3",
    "greenlet>=3.5.1",
    "pydantic-settings>=2.14.1",
    "rich>=15.0.0",
    "sqlmodel>=0.0.38",
]
