[project]
name = "casbin-auth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "casbin-sqlalchemy-adapter>=1.4.0",
    "fastapi[standard]>=0.136.3",
    "greenlet>=3.5.1",
    "psycopg2-binary>=2.9.12",
    "pycasbin>=2.8.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "rich>=15.0.0",
    "sqlalchemy>=2.0.50",
    "sqlmodel>=0.0.38",
]
